--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <receiver
-            android:name="MySMSReceiver"
+            android:name=".MySMSReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter android:priority="999">
