--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '25.0.3'
 
     defaultConfig {
-        applicationId "com.dalydays.android.fullvolumetext"
+        applicationId "com.dalydays.android.textecutor"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
