Implement adding contacts to allowed list (not displaying yet)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
+        <provider
+            android:name=".data.TextecutorProvider"
+            android:authorities="com.dalydays.android.textecutor"
+            android:exported="false" />
     </application>
 
 </manifest>
