--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name="com.dalydays.android.textecutor.ActionActivity">
+        </activity>
         <receiver
             android:name="com.dalydays.android.textecutor.MySMSReceiver"
             android:enabled="true"
